--- a/buf.yaml
+++ b/buf.yaml
@@ -1,10 +1,11 @@
+# For details on buf.yaml configuration, visit https://buf.build/docs/configuration/v2/buf-yaml
 version: v2
 modules:
   - path: proto
     name: buf.build/julsbenandiel/bsr-main
 lint:
   use:
-    - DEFAULT
+    - STANDARD
 breaking:
   use:
     - FILE
